--- a/appendix.html
+++ b/appendix.html
@@ -40,7 +40,7 @@
         </div>
         <br />
         <div class="body_text">
-            As I (Jacob) had the original idea for the public artifact, he was in charge of the creation of the website, but consulted with Aanan during its creation to make sure he agreed with the design choices. As for the information on the flip-cards, we were both responsible for the blurbs regarding our topics. Regarding collaboration, I already mentioned how the creation of the website worked, as well as how he condensed our topics to a few flip-cards worth of important information.
+            As I (Jacob) had the original idea for the public artifact, I was in charge of the creation of the website, but consulted with Aanan during its creation to make sure he agreed with the design choices. As for the information on the flip-cards, we were both responsible for the blurbs regarding our topics. Regarding collaboration, I already mentioned how the creation of the website worked, as well as how he condensed our topics to a few flip-cards worth of important information.
         </div>
     </div>
 </body>
