--- a/index.html
+++ b/index.html
@@ -154,5 +154,6 @@
     </div>
     <script src="script.js">
     </script>
+    <a href="./appendix.html" style="position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); color: #0094ff; background-color: black; padding: .2vw .4vw; border-radius: .5vw; margin-bottom: .5vw">Appendix</a>
 </body>
 </html>
